remove ICRA submission

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <papertitle>Simultaneous Mapping and Target Driven Navigation</papertitle>
               </a>
               <br>
-              <a>Georgios Georgakis</a>,
+              <a href="https://cs.gmu.edu/~ggeorgak/">Georgios Georgakis</a>,
               <strong>Yimeng Li</strong>,
-              <a>Jana Kosecka</a>
+              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
               <br>
               <em>arXiv:1911.07980</em>
               <br>
@@ -77,14 +77,14 @@
               </div>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1911.07980">
+              <a>
                 <papertitle>Learning View and Target Invariant Visual Servoing for Navigation</papertitle>
               </a>
               <br>
               <strong>Yimeng Li</strong>,
-              <a>Jana Kosecka</a>
+              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
               <br>
-              <em>Submitted to ICRA, 2020</em>
+              <em>Under Submission</em>
               <br>
               <p></p>
               <p>Given an initial view and the goal view or an image of the target, we learn viewpoint invariant and target invariant visual servoing for mobile robot navigation.</p>
