update icra submission result

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <strong>Yimeng Li</strong>,
               <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
               <br>
-              <em>Under Submission</em>
+              <em>ICRA, 2020</em>
               <br>
               <p></p>
               <p>Given an initial view and the goal view or an image of the target, we learn viewpoint invariant and target invariant visual servoing for mobile robot navigation.</p>
