--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
-              <a>
+              <a href="https://arxiv.org/abs/2003.02327">
                 <papertitle>Learning View and Target Invariant Visual Servoing for Navigation</papertitle>
               </a>
               <br>
@@ -86,6 +86,7 @@
               <br>
               <em>ICRA, 2020</em>
               <br>
+              <a href="https://drive.google.com/file/d/1WWf31ZPRos-1GykquCzdcVIV9Zd3NAhg/view?usp=sharing">video</a>
               <p></p>
               <p>Given an initial view and the goal view or an image of the target, we learn viewpoint invariant and target invariant visual servoing for mobile robot navigation.</p>
             </td>
