--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a CS PhD student at <a href="http://cs.gmu.edu/">George Mason University</a>, where I work on computer vision and robotics.
               My advisor is Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>.
               </p>
-              <p> Prior to joining George Mason University, I received my B.E. in Software Engineering in 2014 from East China Normal University, China.
+              <p> Prior to joining George Mason University, I received my B.E. in Software Engineering in 2014 from East China Normal University, Shanghai.
               </p>
 
               <p style="text-align:center">
