add internship experimence

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
                 <name>Yimeng Li</name>
               </p>
               <p>I am a CS PhD student at <a href="http://cs.gmu.edu/">George Mason University</a>, where I work on computer vision and robotics.
-              My advisor is Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>.
+              My advisor is Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>. 
+              I have worked on two problems, visual navigation on indoor scenes and out-of-dist object detection.
+              </p>
+              <p> In the summer of 2020 I did an internship with Dr. <a href='https://www.linkedin.com/in/huangjiawei/'>Jiawei Huang</a> at HRI, US where I worked on 3d object detection with stereo. 
+              I spent one summer at AFRL MMOI as an intern working on aerial images. 
               </p>
               <p> Prior to joining George Mason University, I received my B.E. in Software Engineering in 2014 from East China Normal University, Shanghai.
               </p>
