--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+ 		<tr>
+            <td style="padding:10px;width:35%;vertical-align:middle">
+              <div class="one">
+                <img src='images/ood_object.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:65%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/1911.07980">
+                <papertitle>Uncertainty Aware Proposal Segmentation for Unknown Object Detection</papertitle>
+              </a>
+              <br>
+              <strong>Yimeng Li</strong>,
+              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
+              <br>
+              <em>WACV 2022 DNOW Workshop</em>
+              <br>
+              <p></p>
+              <p>Detect unknown out-of-dist objects from outdoor scenes. We adapt distance aware uncertainty estimation of semantic segmentation using Radial Basis Functions Networks (RBFN) for class agnostic object mask prediction. </p>
+            </td>
+        </tr>
         <tr>
             <td style="padding:20px;width:35%;vertical-align:middle">
               <div class="one">
@@ -71,7 +91,7 @@
               <em>arXiv:1911.07980</em>
               <br>
               <p></p>
-              <p>With a learned grid map, the agent navigates to pre-defined target categories.</p>
+              <p>With a learned grid map, the agent navigates to pre-defined target categories. </p>
             </td>
         </tr>
         <tr>
