add materials for previous submissions and add visitor counter.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yimeng Li</name>
               </p>
-              <p>I am a CS PhD student at <a href="http://cs.gmu.edu/">George Mason University</a>, where I work on computer vision and robotics.
+              <p>I am a PhD Candidate at <a href="http://cs.gmu.edu/">George Mason University</a>, where I work on computer vision and robotics.
               My advisor is Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>. 
               I have worked on two problems, visual navigation on indoor scenes and out-of-dist object detection.
               </p>
@@ -72,7 +72,7 @@
               <em>arXiv:2210.01884</em>
               <br>
               <p></p>
-              <p></p>
+              <p>We propose a method for self-supervised pre-training of a semantic segmentation model, exploiting the ability of the agent to move and register multiple views in the novel environment.</p>
             </td>
         </tr>
         
@@ -96,7 +96,7 @@
               <em>arXiv:2209.13137</em>
               <br>
               <p></p>
-              <p></p>
+              <p> This study develops a framework for using unmanned aerial systems (UASs) to monitor fall hazard prevention systems near unprotected edges and openings in high-rise buildings.</p>
             </td>
         </tr>
 
@@ -116,6 +116,7 @@
               <br>
               <em>WACV 2022 DNOW Workshop</em>
               <br>
+              <a href="https://docs.google.com/presentation/d/1Xbn3Uk2psf_t385mkswDr-Q_ZqjdJTLo/edit?usp=sharing&ouid=117534998056602904632&rtpof=true&sd=true">Slides</a>
               <p></p>
               <p>Detect unknown out-of-dist objects from outdoor scenes. We adapt distance aware uncertainty estimation of semantic segmentation using Radial Basis Functions Networks (RBFN) for class agnostic object mask prediction. </p>
             </td>
@@ -138,8 +139,9 @@
               <br>
               <em>arXiv:1911.07980</em>
               <br>
+              <a href="https://drive.google.com/file/d/1-Ctsi-_nuc5RwiRVHnvlrtTDkTa8cjfR/view?usp=sharing">video</a>
               <p></p>
-              <p>With a learned grid map, the agent navigates to pre-defined target categories. </p>
+              <p>This work presents a modular architecture for simultaneous mapping and target driven navigation in indoors environments.</p>
             </td>
         </tr>
         
@@ -168,15 +170,15 @@
             </td>
 		</tr>
   
-
-
-
-
         </tbody></table>
 
       </td>
     </tr>
   </table>
 </body>
+  
+
+<a href="https://www.freecounterstat.com" title="free counters for websites"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=2ezjfwr9j6u7nw1369pxagbjw5fhzs3r" border="0" title="free counters for websites" alt="free counters for websites"></a>
+
 
 </html>
