--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         
+        <tr>
+            <td style="padding:10px;width:35%;vertical-align:middle">
+              <div class="one">
+                <img src='images/icra2023_BellmanExploration.gif'>
+              </div>
+            </td>
+            <td style="padding:20px;width:65%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2211.07898">
+                <papertitle>Learning-Augmented Model-Based Planning for Visual Exploration</papertitle>
+              </a>
+              <br>
+              <strong>Yimeng Li</strong>,
+              <a>Arnab Debnath</a>,
+              <a href="https://cs.gmu.edu/~gjstein/">Gregory Stein</a>,
+              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
+              <br>
+              <em>arXiv:2211.07898</em>
+              <br>
+              <a href="https://drive.google.com/file/d/1Tv2Enex6_f62QY_qR1WMLtkZgSKaMGX_/view?usp=share_link">Presentation</a> /
+              <a href="https://docs.google.com/presentation/d/1ceMGVBJxlq4U2ddRb3mwPh83xcpWHFZc/edit?usp=share_link&ouid=117534998056602904632&rtpof=true&sd=true">Slides</a> /
+              <p></p>
+              <p>We consider the problem of time-limited robotic exploration in previously unseen environments. We propose a novel exploration approach using learning-augmented model-based planning.</p>
+            </td>
+        </tr>
+        
          <tr>
             <td style="padding:10px;width:35%;vertical-align:middle">
               <div class="one">
@@ -177,8 +202,5 @@
   </table>
 </body>
   
-
-<a href="https://www.freecounterstat.com" title="free counters for websites"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=2ezjfwr9j6u7nw1369pxagbjw5fhzs3r" border="0" title="free counters for websites" alt="free counters for websites"></a>
-
 
 </html>
