add webpage for CoRL2022 Project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         
+        <!-- CoRL 2022 Workshop -->
         <tr>
             <td style="padding:10px;width:35%;vertical-align:middle">
               <div class="one">
@@ -72,6 +73,7 @@
               <br>
               <em>CoRL 2022 LHP Workshop</em>
               <br>
+              <a href=Projects/CoRL2022LHPWorkshop/index.html>Webpage</a> /
               <a href="https://youtu.be/Pq4edWdwD98">Presentation</a> /
               <a href="https://docs.google.com/presentation/d/11Y_bdnnj_IHjWWlCzWGxzHsNcGu4tV5g/edit?usp=share_link&ouid=117534998056602904632&rtpof=true&sd=true">Slides</a> /
               <p></p>
@@ -79,6 +81,7 @@
             </td>
         </tr>
         
+        <!-- Visual Exploration -->
         <tr>
             <td style="padding:10px;width:35%;vertical-align:middle">
               <div class="one">
