update CoRL webpage

--- a/Projects/CoRL2022LHPWorkshop/index.html
+++ b/Projects/CoRL2022LHPWorkshop/index.html
@@ -365,7 +365,8 @@
                 <left>
                     <center>
                         <h1>Acknowledgements</h1>
-                        We thank members of the GMU Vision and Robotics Lab. This webpage template was borrowed from some <a
+                        We thank members of the <a href="https://github.com/GMU-vision-robotics">GMU Vision and Robotics Lab</a> and <a href="https://cs.gmu.edu/~gjstein/">RAIL</a>. 
+                        <br>This webpage template was borrowed from some <a
                             href="https://richzhang.github.io/colorization/">colorful folks</a>.
                     </center>
                 </left>
