--- a/Projects/ICRA2023Exploration/index.html
+++ b/Projects/ICRA2023Exploration/index.html
@@ -139,7 +139,7 @@
 <html>
 
 <head>
-    <title>Comparison of Model Free and Model-Based Learning-Informed Planning for PointGoal Navigation</title>
+    <title>Learning-Augmented Model-Based Planning for Visual Exploration</title>
     <meta property="og:title" content="" />
     <meta property="og:image" content="" />
     <link rel="apple-touch-icon" sizes="180x180" href="">
@@ -153,8 +153,7 @@
 <body>
     <br>
     <center>
-        <span style="font-size:42px">Comparison of Model Free and Model-Based <br>
-            Learning-Informed Planning for PointGoal Navigation
+        <span style="font-size:42px">Learning-Augmented Model-Based Planning<br> for Visual Exploration
         </span>
 
     </center>
@@ -203,7 +202,7 @@
         <tr>
             <td align=center width=100px>
                 <center>
-                    <span style="font-size:20px"><a href=https://gjstein.github.io/corl2022wkshp-long-horizon-planning/>In CoRL 2022 LHP Workshop</span>
+                    <span style="font-size:20px">Under Review</span>
                 </center>
             </td>
         </tr>
@@ -214,30 +213,16 @@
         <tr>
             <td align=center width=100px>
                 <center>
-                    <span style="font-size:20px"><a href="https://openreview.net/forum?id=2s92OhjT4L">[Paper]</a></span>
+                    <span style="font-size:20px"><a href="https://arxiv.org/abs/2211.07898">[Paper]</a></span>
                 </center>
             </td>
 
-            <!--
             <td align=center width=100px>
                 <center>
-                    <span style="font-size:20px"><a href="https://arxiv.org/abs/2007.10982">[Arxiv]</a></span>
-                </center>
-            </td> -->
-
-            <td align=center width=100px>
-                <center>
-                    <span style="font-size:20px"><a href="https://youtu.be/Pq4edWdwD98">[Video]</a></span>
+                    <span style="font-size:20px"><a href="https://youtu.be/vTr01A6Jna4">[Video]</a></span>
                 </center>
             </td>
 
-            <!--
-            <td align=center width=100px>
-                <center>
-                    <span style="font-size:20px"><a href="https://github.com/shubham-goel/ds">[Code]</a></span>
-                </center>
-            </td>
-            -->
         </tr>
     </table>
 
@@ -248,8 +233,8 @@
             <td width=1000px>
                 <center>
                     <!-- img src="./resources/images/approach.png" width="1000px"></img>-->
-                    <video width="900" autoplay muted controls loop>
-                        <source src="./resources/images/DP_YFu_merge.mp4" type="video/mp4">
+                    <video width="469" autoplay muted controls loop>
+                        <source src="./resources/images/DP_large_merged.mp4" type="video/mp4">
                     </video>
                 </center>
             </td>
@@ -258,13 +243,13 @@
 
     <table align=center width=600px>
         <tr>
-            <td width=600px>
+            <td width=600px text-align: left>
                 <center>
-                    <span style="font-size:14px"><i>
-                            In the point goal navigation task,  a robot is deployed in a previously-unseen environment and is required to navigate to a location within limited number of steps.
-                            Here we show a running example of navigating to the point goal with the a frontier-based approach.
-                            A frontier is a boundary between free and unknown space, as denoted by the green pixels. 
-                            Yellow pixels are the selected frontier.
+                    <span style="font-size:14px" ><i>
+At each step, the agent will receive a 360 panorama or 90 degree egocentric observation.
+Here in the video, we show a running example of our model exploring a novel scene using a frontier-based approach.
+A frontier is a boundary between free and unknown space, as denoted by the green pixels in the video. 
+Yellow pixels are the selected frontier.
                         </i>
                     </span>
                 </center>
@@ -273,13 +258,7 @@
     </table>
 
     <br><br>
-    We compare the state-of-the-art Deep Reinforcement Learning based approaches with Partially Observable Markov Decision Process (POMDP) formulation of the point goal navigation problem. 
-    We adapt the (POMDP) sub-goal framework proposed by Stein et al. and modify the component that estimates frontier properties by using partial semantic maps of indoor scenes built from images' semantic segmentation. 
-    In addition to the well-known completeness of the model-based approach, we demonstrate that it is robust and efficient in that it leverages informative, learned properties of the frontiers compared to an optimistic frontier-based planner. 
-    We also demonstrate its data efficiency compared to the end-to-end deep reinforcement learning approaches. 
-    We compare our results against an optimistic planner, ANS and DD-PPO
-    on Matterport3D dataset using the Habitat Simulator.
-    We show comparable, though slightly worse performance than the SOTA DD-PPO approach, yet with far fewer data. 
+    We consider the problem of time-limited robotic exploration in previously unseen environments where explo- ration is limited by a predefined amount of time. We propose a novel exploration approach using learning-augmented model- based planning. We generate a set of subgoals associated with frontiers on the current map and derive a Bellman Equation for exploration with these subgoals. Visual sensing and advances in semantic mapping of indoor scenes are exploited for training a deep convolutional neural network to estimate properties associated with each frontier: the expected unobserved area beyond the frontier and the expected timesteps (discretized actions) required to explore it. The proposed model-based planner is guaranteed to explore the whole scene if time permits. We thoroughly evaluate our approach on a large-scale pseudo-realistic indoor dataset (Matterport3D) with the Habitat simulator. We compare our approach with classical and more recent RL-based exploration methods, demonstrating its clear advantages in several settings.
     <br><br>
 
     <hr>
@@ -292,7 +271,7 @@
             <td width=600px>
                 <center>
                     <div class="video">
-                        <iframe width="720" height="405" src="https://www.youtube.com/embed/Pq4edWdwD98" frameborder="0"
+                        <iframe width="720" height="405" src="https://www.youtube.com/embed/vTr01A6Jna4" frameborder="0"
                             allowfullscreen></iframe>
                     </div>
                 </center>
@@ -302,7 +281,7 @@
     <br>
 
     <center>
-        <h3>Learning over Subgoals Planner</h3>
+        <h3>Learning-Augmented Model-Based Frontier Exploration (LFE)</h3>
     </center>
     <table align=center width=900px>
         <tr>
@@ -318,14 +297,14 @@
     <br>
 
     <center>
-        <h3>Learning Module</h3>
+        <h3>Compare different planning strategies</h3>
     </center>
     <table align=center width=900px>
         <tr>
             <td width=600px>
                 <center>
                   <div class="image">
-                    <img src='./resources/images/unet.png' width="785" height="301" style="border-style: none">
+                    <img src='./resources/images/planning_strategies.png' width="700" style="border-style: none">
                   </div>
                 </center>
             </td>
@@ -334,14 +313,46 @@
     <br>
 
     <center>
-        <h3>Results</h3>
+        <h3>Learning Module</h3>
     </center>
     <table align=center width=900px>
         <tr>
             <td width=600px>
                 <center>
                   <div class="image">
-                    <img src='./resources/images/success_cases.png' width="759" height="392" style="border-style: none">
+                    <img src='./resources/images/unet_resnet.png' width="500" style="border-style: none">
+                  </div>
+                </center>
+            </td>
+        </tr>
+    </table>
+    <br>
+
+    <center>
+        <h3>Perception Module</h3>
+    </center>
+    <table align=center width=900px>
+        <tr>
+            <td width=600px>
+                <center>
+                  <div class="image">
+                    <img src='./resources/images/perception_module.png' width="600" style="border-style: none">
+                  </div>
+                </center>
+            </td>
+        </tr>
+    </table>
+    <br>
+
+    <center>
+        <h3>Results: compare LFE with the baseline Greedy approach</h3>
+    </center>
+    <table align=center width=900px>
+        <tr>
+            <td width=600px>
+                <center>
+                  <div class="image">
+                    <img src='./resources/images/example_traj.png' width="759" style="border-style: none">
                   </div>
                 </center>
             </td>
@@ -361,13 +372,11 @@
             <td>
                 <div class="paper" id="assemblies19_bib">
                         <pre xml:space="preserve">
-                        @inproceedings{
-                            li2022comparison,
-                            title={Comparison of Model Free and Model-Based Learning-Informed Planning for PointGoal Navigation},
-                            author={Yimeng Li and Arnab Debnath and Gregory J. Stein and Jana Kosecka},
-                            booktitle={CoRL 2022 Workshop on Learning, Perception, and Abstraction for Long-Horizon Planning},
-                            year={2022},
-                            url={https://openreview.net/forum?id=2s92OhjT4L}
+                        @article{li2022learning,
+                          title={Learning-augmented model-based planning for visual exploration},
+                          author={Li, Yimeng and Debnath, Arnab and Stein, Gregory and Kosecka, Jana},
+                          journal={arXiv preprint arXiv:2211.07898},
+                          year={2022}
                         }
                         </pre>
                   </div>
