add CoRL2022 workshop paper code link.

--- a/Projects/CoRL2022LHPWorkshop/index.html
+++ b/Projects/CoRL2022LHPWorkshop/index.html
@@ -231,13 +231,12 @@
                 </center>
             </td>
 
-            <!--
+            
             <td align=center width=100px>
                 <center>
-                    <span style="font-size:20px"><a href="https://github.com/shubham-goel/ds">[Code]</a></span>
+                    <span style="font-size:20px"><a href="https://github.com/yimengli46/bellman_point_goal">[Code]</a></span>
                 </center>
             </td>
-            -->
         </tr>
     </table>
 
