--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
               <a href=Projects/CoRL2022LHPWorkshop/index.html>Project Page</a> /
               <a href="https://youtu.be/Pq4edWdwD98">Presentation</a> /
               <a href="https://docs.google.com/presentation/d/11Y_bdnnj_IHjWWlCzWGxzHsNcGu4tV5g/edit?usp=share_link&ouid=117534998056602904632&rtpof=true&sd=true">Slides</a> /
+              <a href="https://github.com/yimengli46/bellman_point_goal">Code</a> /
               <p></p>
               <p>We compare LSP-UNet (a model-based approach) against an optimistic planner, ANS and DD-PPO on Matterport3D dataset using the Habitat Simulator.</p>
             </td>
