comment out Sulabh iccv submission right now.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             </td>
         </tr>
         
-        <!-- Sulabh's Semantic Segmentation -->
+
+        <!-- Sulabh's Semantic Segmentation 
          <tr>
             <td style="padding:20px;width:35%;vertical-align:middle">
                 <img src='images/Sulabh_selfSupervise.png' width="256">
@@ -126,6 +127,7 @@
               <p>We propose a method for self-supervised pre-training of a semantic segmentation model, exploiting the ability of the agent to move and register multiple views in the novel environment.</p>
             </td>
         </tr>
+        -->
         
         <!-- Civil Engineering -->
         <tr>
