update code for IROS2023

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
               <br>
               <a href=Projects/IROS2023Exploration/index.html>Project Page</a> /
               <a href="https://youtu.be/vTr01A6Jna4">Presentation</a> /
-              <a href="https://docs.google.com/presentation/d/1ceMGVBJxlq4U2ddRb3mwPh83xcpWHFZc/edit?usp=share_link&ouid=117534998056602904632&rtpof=true&sd=true">Slides</a> /
+              <a href="https://docs.google.com/presentation/d/1DPefeDjLnLkC2M8jyIyhAj6wsnCN-HFd/edit?usp=sharing&ouid=117534998056602904632&rtpof=true&sd=true">Slides</a> /
+              <a href=https://drive.google.com/file/d/1FP1MkphoMHwIdhH3qVgOe6-di641xVO8/view?usp=sharing>Poster</a> /
+              <a href="https://github.com/yimengli46/bellman-exploration">Code</a> /
               <p></p>
-              <p>We consider the problem of time-limited robotic exploration in previously unseen environments. We propose a novel exploration approach using learning-augmented model-based planning.</p>
+              <p>We consider the problem of time-limited robotic exploration in previously unseen environments. Considering the situation, the agent should go to the spot to extinguish fire if a fire alarm rings and the agent should have time to explore the environment in detail if its job is to build a map of the environment.</p>
             </td>
         </tr>
         
