--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a href="mailto:yli44@gmu.edu">Email</a> &nbsp/&nbsp
                 <a href="data/LI_Yimeng_cv.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=gOLPBtMAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://github.com/yimengli46">GitHub</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/yimeng-li-423666102/"> LinkedIn </a>&nbsp/&nbsp
                 <a href="https://www.semanticscholar.org/author/Yimeng-Li/1527113445/"> Semantic Scholar </a>
               </p>
