--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G36WCQXMV6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G36WCQXMV6');
+</script>
+
+
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <title>Yimeng Li</title>
   
