--- a/Projects/IROS2023Exploration/index.html
+++ b/Projects/IROS2023Exploration/index.html
@@ -420,11 +420,13 @@ For the view based model, the input to the ResNet-18 model is the egocentric dep
             <td>
                 <div class="paper" id="assemblies19_bib">
                         <pre xml:space="preserve">
-                        @article{li2022learning,
+                        @inproceedings{li2023learning,
                           title={Learning-augmented model-based planning for visual exploration},
-                          author={Li, Yimeng and Debnath, Arnab and Stein, Gregory and Kosecka, Jana},
-                          journal={arXiv preprint arXiv:2211.07898},
-                          year={2022}
+                          author={Li, Yimeng and Debnath, Arnab and Stein, Gregory J and Ko{\v{s}}eck{\'a}, Jana},
+                          booktitle={2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+                          pages={5165--5171},
+                          year={2023},
+                          organization={IEEE}
                         }
                         </pre>
                   </div>
