--- a/index.html
+++ b/index.html
@@ -70,6 +70,52 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+
+        <!-- AVD auto-labeling -->
+        <tr>
+            <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src='images/wacv2024_title.jpg' width="256">
+            </td>
+            <td style="padding:20px;width:65%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2311.10883.pdf">
+                <papertitle>Labeling Indoor Scenes with Fusion of Out-of-the-Box Perception Models</papertitle>
+              </a>
+              <br>
+              <strong>Yimeng Li*</strong>,
+              <a href="https://navidnr.com/">Navid Rajabi*</a>,
+              <a href="https://github.com/sulabh-shr">Sulabh Shrestha</a>,
+              <a href="https://analytics.drake.edu/~reza/">Md Alimoor Reza</a>
+              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
+              <br>
+              <em>WACV 2024 2nd Workshop on Pretraining</em>
+              <br>
+              <p></p>
+              <p>Starting from an RGB-D dataset, we propose a labeling approach for semantic segmentation annotations.</p>
+            </td>
+        </tr>
+
+
+		    <!-- Sulabh's Semantic Segmentation -->
+        <tr>
+            <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src='images/Sulabh_selfSupervise.png' width="256">
+            </td>
+            <td style="padding:20px;width:65%;vertical-align:middle">
+              <a href="https://openaccess.thecvf.com/content/WACV2024W/Pretrain/papers/Shrestha_Self-Supervised_Pre-Training_for_Semantic_Segmentation_in_an_Indoor_Scene_WACVW_2024_paper.pdf">
+                <papertitle>Self-supervised Pre-training for Semantic Segmentation in an Indoor Scene</papertitle>
+              </a>
+              <br>
+              <a href="https://github.com/sulabh-shr">Sulabh Shrestha</a>,
+              <strong>Yimeng Li</strong>,
+              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
+              <br>
+              <em>WACV 2024 2nd Workshop on Pretraining</em>
+              <br>
+              <p></p>
+              <p>We propose a method for self-supervised pre-training of a semantic segmentation model, exploiting the ability of the agent to move and register multiple views in the novel environment.</p>
+            </td>
+        </tr>
+
         <!-- Visual Exploration -->
         <tr>
             <td style="padding:20px;width:35%;vertical-align:middle">
@@ -123,32 +169,10 @@
             </td>
         </tr>
         
-        <!-- Sulabh's Semantic Segmentation 
-         <tr>
-            <td style="padding:20px;width:35%;vertical-align:middle">
-                <img src='images/Sulabh_selfSupervise.png' width="256">
-            </td>
-            <td style="padding:20px;width:65%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2210.01884">
-                <papertitle>Self-supervised Pre-training for Semantic Segmentation in an Indoor Scene</papertitle>
-              </a>
-              <br>
-              <a href="https://github.com/sulabh-shr">Sulabh Shrestha</a>,
-              <strong>Yimeng Li</strong>,
-              <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
-              <br>
-              <em>arXiv:2210.01884</em>
-              <br>
-              <p></p>
-              <p>We propose a method for self-supervised pre-training of a semantic segmentation model, exploiting the ability of the agent to move and register multiple views in the novel environment.</p>
-            </td>
-        </tr>
-        -->
-        
         <!-- Civil Engineering -->
         <tr>
             <td style="padding:20px;width:35%;vertical-align:middle">
-                <img src='images/guardrails.jpg' width="256">
+                <img src='images/guardrails.png' width="256">
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2209.13137">
