update new position at Schnackel engineers.

--- a/index.html
+++ b/index.html
@@ -34,19 +34,20 @@
               <p style="text-align:center">
                 <name>Yimeng Li</name>
               </p>
-              <p>I am a PhD Candidate at <a href="http://cs.gmu.edu/">George Mason University</a>, where I work on computer vision and robotics.
-              My advisor is Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>. 
-              I have worked on two problems, visual navigation on indoor scenes and out-of-dist object detection.
+
+              <p>I'm a seasoned Senior Software Engineer at <a href="https://schnackel.com/">Schnackel Engineers</a> in Omaha, NE, and a recent Ph.D. graduate in Computer Science from <a href="http://cs.gmu.edu/">George Mason University</a> (2023). 
               </p>
-              <p> In the summer of 2020 I did an internship with Dr. <a href='https://www.linkedin.com/in/huangjiawei/'>Jiawei Huang</a> at HRI, US where I worked on 3d object detection with stereo. 
-              I spent one summer at AFRL MMOI as an intern working on aerial images. 
+              <p>
+              Under the mentorship of Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a> and collaborations with Prof. <a href="https://gjstein.com/">Gregory J. Stein</a>, my research focused on visual navigation in indoor scenes and out-of-distribution object detection. 
               </p>
-              <p> Prior to joining George Mason University, I received my B.E. in Software Engineering in 2014 from East China Normal University, Shanghai.
+              <p>Notable experiences include a 2020 internship at HondaRI, US, working on 3D object detection with stereo, and a stint at AFRL MMOI dealing with aerial images. 
+              </p>
+              <p>My journey began with a B.E. in Software Engineering from East China Normal University in 2014, laying the groundwork for a career blending academia with real-world problem-solving. Passionate about applying cutting-edge tech to solve challenges, I bring a diverse skill set to the dynamic field of software engineering.
               </p>
 
               <p style="text-align:center">
-                <a href="mailto:yli44@gmu.edu">Email</a> &nbsp/&nbsp
-                <a href="data/LI_Yimeng_cv.pdf">CV</a> &nbsp/&nbsp
+                <a href="mailto:liyimeng92@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="data/resume_Yimeng.pdf">Resume</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=gOLPBtMAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/yimengli46">GitHub</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/yimeng-li-423666102/"> LinkedIn </a>&nbsp/&nbsp
@@ -84,7 +85,7 @@
               <strong>Yimeng Li*</strong>,
               <a href="https://navidnr.com/">Navid Rajabi*</a>,
               <a href="https://github.com/sulabh-shr">Sulabh Shrestha</a>,
-              <a href="https://analytics.drake.edu/~reza/">Md Alimoor Reza</a>
+              <a href="https://analytics.drake.edu/~reza/">Md Alimoor Reza</a>,
               <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a>
               <br>
               <em>WACV 2024 2nd Workshop on Pretraining</em>
