add webpage for the wacv2024 paper

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
               <br>
               <em>WACV 2024 2nd Workshop on Pretraining</em>
               <br>
+              <a href=Projects/WACV2024LabelingAVD/index.html>Project Page</a> /
+              <a href="https://github.com/yimengli46/auto_sseg_avd_main">Code</a> /
               <p></p>
               <p>Starting from an RGB-D dataset, we propose a labeling approach for semantic segmentation annotations.</p>
             </td>
