remove resume from website.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
               <p style="text-align:center">
                 <a href="mailto:liyimeng92@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/resume_Yimeng.pdf">Resume</a> &nbsp/&nbsp
+                <!--a href="data/resume_Yimeng.pdf">Resume</a> &nbsp/&nbsp-->
                 <a href="https://scholar.google.com/citations?user=gOLPBtMAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/yimengli46">GitHub</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/yimeng-li-423666102/"> LinkedIn </a>&nbsp/&nbsp
