--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <name>Yimeng Li</name>
               </p>
 
-              <p>I'm a seasoned Senior Software Engineer at <a href="https://schnackel.com/">Schnackel Engineers</a> in Omaha, NE, and a recent Ph.D. graduate in Computer Science from <a href="http://cs.gmu.edu/">George Mason University</a> (2023). 
+              <p>I'm a recent Ph.D. graduate in Computer Science from <a href="http://cs.gmu.edu/">George Mason University</a> (2023). 
               </p>
               <p>
               Under the mentorship of Prof. <a href="http://cs.gmu.edu/~kosecka">Jana Kosecka</a> and collaborations with Prof. <a href="https://gjstein.com/">Gregory J. Stein</a>, my research focused on visual navigation in indoor scenes and out-of-distribution object detection. 
